Blogpage The Git Mentality

--- a/_posts/2024-03-24-spells.md
+++ b/_posts/2024-03-24-spells.md
@@ -1,10 +1,17 @@
 ---
-title: "Barebone static site generator"
+title: "The GIT commit mentality"
 date: 2024-03-24 12:00:00 +0000
 categories: [Personal, Blog] # max 2
-tags: [project, static site generator, blogpost, programming, python, html, regex, static content] # TAG always lowercase
+tags: [blogpost, programming, git] # TAG always lowercase
 ---
 
-##Git Commit mentality 
 
-When i push this i will: Commit message what chagnes do i make. 
+Commit messages are crucial for maintaining a clear history of changes in your project. They should be concise, clear, and follow a consistent format. In your case, you want to use the format "When I push, I will...".
+
+Here's an example of how you might fill out the commit message:
+
+"When I push, I will update the generator section in the 2024-03-24-spells.md file."
+
+This commit message clearly states what changes will be made when the commit is pushed. It specifies the file that was changed and the section within that file that was updated. This way, anyone looking at the commit history can quickly understand what this commit does.
+
+Thus far i have been a sinner. 
